--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
   padding-top: 90px;
   min-height: 600px;
   margin-bottom: 0;
-  background-image: url('images/image.jpg');
+  background-image: ('images/image.jpg');
   background-size: cover;
   background-attachment: fixed;
 }
