--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
   padding-top: 90px;
   min-height: 600px;
   margin-bottom: 0;
-  background-image: ('images/image.jpg');
+  background-image: url('images/image.jpg');
   background-size: cover;
   background-attachment: fixed;
 }
@@ -19,7 +19,19 @@ blockquote {
   border-left: 0;
 }
 
-#mission {
+#lights {
+  background-color: rgba(205,92,92);
+  color: #ddd;
+  padding-bottom: 40px;
+}
+
+#todo {
+  background-color: rgba(32, 35, 41, 0.9);
+  color: #ddd;
+  padding-bottom: 40px;
+}
+
+#eat {
   background-color: rgba(32, 35, 41, 0.9);
   color: #ddd;
   padding-bottom: 40px;
@@ -39,7 +51,7 @@ h2 {
 }
 
 .navbar-inverse {
-  background-color: rgba(32, 35, 41,0.8);
+  background-color: rgba(25, 25, 112);
 }
 
 .form-inline input[name='email'] {
