--- a/css/styles.css
+++ b/css/styles.css
@@ -9,9 +9,27 @@
 
 
 .jumbotron h1 {
+  position: relative;
   font-family: 'Crimson Text';
   color: white;
   margin-bottom: 1em;
+}
+
+.mySlides {
+    display:none;
+}
+
+.slide-container{
+  position: relative;
+  color: white;
+}
+/* For center piece */
+.slide-centered{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: white;
+    transform: translate(-50%, -10%);
 }
 
 body{font-family:'Quicksand';}
